--- a/public/css/events.css
+++ b/public/css/events.css
@@ -632,8 +632,8 @@ margin-left: 42px;
 }
 
 .carousel img {
-  width: 200px;
-  height: auto;
+  width: 300px;
+  height: 130px;
   margin: 0 10px;
   border-radius: 8px;
 }
@@ -902,7 +902,8 @@ margin-top: 50px;
     }
 
     .carousel img {
-        width: 100px;
+        width: 150px;
+        height: 75px;
     }
 
     .btn1 {
@@ -1370,7 +1371,7 @@ margin-top: 50px;
     }
 
     .carousel img {
-        width: 200px;
+        width: 300px;
     }
 
     /*.card1 .card {*/
